--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
   left: 0;
   right: 10px;
   width: 50%;
-  height: 390%;
+  height: auto;
   border-radius: 30px;
   background-color: #2b2c48;
   transition: 0.5s;
@@ -71,11 +71,25 @@ body {
   font-size: 24px;
   font-weight: bold;
   color: #fff;
-  padding: 20px;
-  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-left: 10%;
 }
 
 .sidebar a {
+  padding: 15px;
+  text-decoration: none;
+  font-size: 15px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+  text-align-last: center;
+	font-weight: 600;
+	text-decoration: none;
+}
+
+ .btn {
   padding: 15px;
   text-decoration: none;
   font-size: 18px;
@@ -85,6 +99,10 @@ body {
   text-align-last: center;
 	font-weight: 600;
 	text-decoration: none;
+}
+
+ .btn:hover {
+  background-color: #434558;
 }
 
 .sidebar a:hover {
